-
Bug
-
Resolution: Done
-
P2: Important
-
5.4.2, 5.12.7
-
None
-
Q1/2020 Finale, Q2/2020 kick off
Here is tiny example runnable by qmlscene:
Rectangle { id: root width: 600 height: 400 color: "seagreen" ParallelAnimation { // SequentialAnimation { id: animation running: true // ColorAnimation { // target: root // property: "color" // to: "salmon" // duration: 2000 // } onStarted: console.log("animation started") onStopped: console.log("animation stopped") } }
With ColorAnimation commented out, the log looks like this:
qml: animation stopped qml: animation stopped qml: animation started
Expected output (wich is true for the case with ColorAnimation):
qml: animation started qml: animation stopped
- mentioned in
-
Page Loading...
For Gerrit Dashboard: QTBUG-48193 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
294695,3 | Fix signal emission order for zero-duration animations | 5.12 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
295296,3 | Fix signal emission order for zero-duration animations | 5.15 | qt/qtdeclarative | Status: MERGED | +2 | 0 |